fixed css layout problem

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -50,11 +50,9 @@ body {
 }
 
 .page {
-  max-width: 1400rem;
+  max-width: 140rem;
   width: 100%;
   margin-top: 13.6rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
   margin-bottom: 3.6rem;
 }
 
